feat: add form in home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,7 @@
-<p>this is home</p>
+<section class="city-list">
+  <form>
+    <label for="city">city: </label>
+    <input name="city" type=" text" placeholder="Filter by city">
+    <button class="primary" type="button">Add</button>
+  </form>
+</section>
