--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,4 +4,5 @@
     <input name="city" type=" text" placeholder="Filter by city">
     <button class="primary" type="button">Add</button>
   </form>
+  <cities [cities]="cities"></cities>
 </section>
