--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,13 +1,11 @@
 .city-list {
-  width: 500px;
-  height: 100px;
-  display: flex;
-  justify-content: center;
+  width: 800px;
   margin: auto;
-  padding: 30px 0;
+  padding: 30px;
 
   form {
     display: flex;
+    justify-content: center;
     align-items: center;
   }
 
@@ -25,13 +23,4 @@
   input {
     margin: 0 4px;
   }
-}
-
-.primary {
-  border: solid 1px var(--primary-color);
-  background: var(--primary-color);
-  margin: 0 4px;
-  border-radius: 8px;
-  color: white;
-  padding: 4px 8px;
 }
