feat: add some display in city detail

--- a/src/app/city-visit-detail/city-visit-detail.component.html
+++ b/src/app/city-visit-detail/city-visit-detail.component.html
@@ -1,1 +1,5 @@
-<p>city-visit-detail works!</p>
+<ng-container>
+  <!-- todo: enhance ui display -->
+  <p>name: {{cityDetail?.name}}</p>
+  <p>name: {{cityDetail?.area}}</p>
+</ng-container>
